# SSE-Implementation-in-FastAPI-with-RabbitMQ

./: .env  .gitignore  custom_encoder.py  env-sample  main.py  pyproject.toml
app/: api_urls.py  main.py
config/: db.py
dbschema/: blog.esdl  rabbitmq.py
dbschema/migrations/: 00001.edgeql  00002.edgeql
queries/: create_blog_async_edgeql.py
src/blog/adapters/: repositories.py
src/blog/domain/: model.py
src/blog/entrypoints/: blog_endpoint.py
src/blog/schemas/: schemas.py
src/blog/service_layer/: blog_service.py  unit_of_work.py
src/blog/service_layer/queries/: create_blog.edgeql
